--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ a foundation to learn representations that can be tuned for diverse neural decod
       <h2 class="title">Poster</h2>
 
       <!-- TODO: Replace with your poster PDF -->
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
+      <iframe  src="static/pdfs/poster.pdf" width="100%" height="550">
           </iframe>
         
       </div>
