--- a/index.html
+++ b/index.html
@@ -328,6 +328,38 @@ microelectrode arrays using raw local field potential">
     </div>
   </div>
 </section>
+<!-- Results section -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Results</h2>
+        <div class="content has-text-justified">
+          <ul style="text-align:left;">
+            <li><strong>State-of-the-Art Localization Accuracy:</strong> Our SSL-based approach achieves high precision in mapping microelectrode array channels to specific anatomical regions, such as the Cortex, CA1, CA2, CA3, and DG, even when using raw, unlabeled LFP data.</li>
+            <li><strong>Cross-Species Generalization:</strong> The framework demonstrates robust performance across different species, successfully localizing electrodes in both rodent and non-human primate (Macaque) brains using the same underlying architecture.</li>
+          </ul>
+          <!-- Image carousel -->
+          <div id="results-carousel" class="carousel results-carousel">
+            <div class="item">
+              <img src="static/images/figure2.png" alt="Result Figure 1" loading="lazy" style="width:100%; max-width:600px;" />
+              <h2 class="subtitle has-text-centered">Result Figure 1 description.</h2>
+            </div>
+            <div class="item">
+              <img src="static/images/figure5.png" alt="Result Figure 2" loading="lazy" style="width:100%; max-width:600px;" />
+              <h2 class="subtitle has-text-centered">Result Figure 2 description.</h2>
+            </div>
+            <div class="item">
+              <img src="static/images/supplement_figure2.png" alt="Result Figure 3" loading="lazy" style="width:100%; max-width:600px;" />
+              <h2 class="subtitle has-text-centered">Result Figure 3 description.</h2>
+            </div>
+            <!-- Add more items as needed -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <!-- Teaser video-->
